iowow (1.3.2) UNRELEASED; urgency=medium

  * Added `iwkv_cusror_is_matched_key` (iwkv.h)
  * `iwkv_cursor_copy_key` now aware of `IWDB_COMPOUND_KEYS` mode (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Sat, 02 Mar 2019 01:04:01 +0700

iowow (1.3.1) testing; urgency=medium

  * Eliminate adaptive `IWDB_VNUM64_KEYS` key sizing in `_unpack_effective_key` for the sake of API simplicity (iwkv.c)
  * BUG: incorrect key handling in `iwkv_del` - key was not unpacked before. (iwkv.h)

 -- Anton Adamansky <adamansky@gmail.com>  Thu, 28 Feb 2019 10:40:11 +0700

iowow (1.3.0) testing; urgency=medium

  * `IWKV_PUT_HANDLER` called for insert operations (not only for updates)
  * Added `IWFS_OUNLINK` flag. Unlink(delete) file on close (iwfile.h)
  * Added `IWFS_OTMP` flag. Create tmp file (iwfile.h)
  * Added UUID v4 generation function (iwuuid.h)
  * Added iwp_tmpdir() (iwp.h)
  * Added iwp_allocate_tmpfile_path() (iwp.h)
  * Added iwxstr_printf() (iwxstr.h)
  * Added iwxstr_cat2() (iwxstr.h)
  * Added `IWKV_VAL_INCREMENT` mode for `iwkv_put()` and test case (iwkv.h)
  * Added support of variable-length encoded integer keys `IWDB_VNUM64_KEYS` (iwkv.h)
  * Added support of compound keys (`IWDB_COMPOUND_KEYS`) (#18)
  * Removed `dup` integer value routines
  * Code cleanup and refactoring

 -- Anton Adamansky <adamansky@gmail.com>  Wed, 27 Feb 2019 12:11:48 +0700

iowow (1.2.14) testing; urgency=medium

  * BUG: Fix WAL checkpoint workflow to avoid deadlocks with cursor threads
  * BUG: Clang6 fatal error: variable 'cur' is used uninitialized  (#15)
  * Implemented new multithreaded stress test (iwkv_test6.c) used OMP stack
  * Added iwkv_new_db(IWKV iwkv, iwdb_flags_t dbflg, uint32_t *odbid, IWDB *dbp) (iwkv.h)
  * Removed unused `IWKV_NOLOCKS` option.
  * Added `IW_EXPORT` to `iowow_version_*` API functions  (iowow.h)
  * Added iwrc iwkv_state(IWKV iwkv, IWFS_FSM_STATE *out) (iwkv.h)
  * Do not check `IWKV_NO_OVERWRITE` for databases in `IWDB_DUP_UINTXX_VALS` mode